mixture version 2.0.0 2020-02-09:

- Cpp used.
- Missing data implemented. 
- Four mean-variance mixtures.